--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "shorten_url"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
+mysql_async = "0.32.2"
+redis_rs = "0.9.0"
+tokio = { version = "1.32.0", features = ["full"] }
+warp = "0.3.5"
