--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+base62 = "2.0.2"
 mysql_async = "0.32.2"
 redis_rs = "0.9.0"
+sonyflake = "0.2.0"
 tokio = { version = "1.32.0", features = ["full"] }
 warp = "0.3.5"
